--- a/codeflowhub/template/read_pdf_pkg/Dockerfile
+++ b/codeflowhub/template/read_pdf_pkg/Dockerfile
@@ -4,5 +4,5 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         libgl1 libglib2.0-0 libgomp1 \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install paddlepaddle paddleocr[doc-parser] pymupdf
+RUN pip install paddlepaddle==3.2.2 paddleocr[doc-parser] pymupdf
 RUN pip install https://paddle-whl.bj.bcebos.com/nightly/cu126/safetensors/safetensors-0.6.2.dev0-cp38-abi3-linux_x86_64.whl
